ISIS-2374: actually run the smoketests